# python-client-sdk

./: BUILD.md  LICENSE  Makefile  README.md  setup.cfg
aihero/: __init__.py  api.py  automation.py  base_client.py  cli.py  client.py  detect_sentiment.py  eval.py  exceptions.py  item_recommendation.py  openai_helper.py  project.py  projects.py  promptstash.py  recommend_items_to_people.py  recommend_people_from_two_groups_to_each_other.py  recommend_people_to_each_other.py  schema.py  tag_entire_images.py  tag_short_text.py  user_recommendation.py  workflows.py  workspace.py
aihero/apps/: completions.py
aihero/apps/promptcraft/: chat_completions.py  completions.py  dummy.py
examples/: 01_project.py  02_workflows.py  03_demo_zen.py  04_demo_blog.py  05_demo_analyze_webpage.py  06_demo_analyze_pdf.py  PromptOps_with_OpenAI_Chat_Completions_API_+_PromptStash_(Beginner).ipynb  PromptOps_with_OpenAI_Completions_API_+_PromptStash_(Beginner).ipynb  j2e.csv  j2e_chat.csv  project.py  prompt_engineering_completions_api.py  test_suite.csv  workflows.py
old/: README.md
