[metadata]
name = aihero
version = 0.3.0
description = AI Hero Python SDK
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ai-hero/python-client-sdk
author = AI Hero Team
author_email = team@aihero.studio
license = MIT
license_files = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Scientific/Engineering :: Artificial Intelligence
    Topic :: Software Development :: Libraries
keywords = AI Hero, Spotcheck, MLOps, AI, Data Annotation, Labeling, Model Training, Model Serving, Model Deployment

[options]
packages = find:
install_requires = 
    httpx
    openai
    validators
    streamlit
    python-dotenv
    fire
    pandas

[options.entry_points]
console_scripts =
    aihero = aihero.cli:main